# fkie_husky_manipulation_simulation

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml  readme.md
config/: husky_panda.yaml  husky_panda_control.yaml  test.yaml
config/bt/: husky_bt_MBF.xml  husky_bt_MBF.yaml
config/mbf/: controllers.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planners.yaml  recovery_behaviors.yaml
config/rviz/: husky_manipulation.rviz
launch/: demo_empty.launch  demo_outdoor.launch  demo_warehouse.launch  gazebo.launch  spawn_mobile_manip.launch  test.launch  test_panda_only.launch  test_panda_only_ns.launch
launch/includes/: spawn_mobile_manipulator.launch
models/vrc_driving_terrain/: model.config
rviz/: husky_manipulation.rviz
urdf/: decorations.urdf.xacro  husky.urdf.xacro  husky_panda.urdf.xacro  panda_arm.urdf.xacro  panda_gazebo.xacro  utils.xacro
worlds/: empty.world  warehouse_icra_large.world
