<?xml version="1.0"?>
<package format="2">
  <name>fkie_husky_manipulation_simulation</name>
  <version>0.0.0</version>
  <description>
    The fkie_husky_manipulation_simulation package simulates a husky robot base and a manipulator arm 
    such as a panda arm.
  </description>

  <author>Menaka Naazare</author>
  <author>Francisco Garcia Rosas</author>

  <maintainer email="menaka.naazare@fkie.fraunhofer.de">Menaka Naazare</maintainer>
  <maintainer email="francisco.garcia.rosas@fkie.fraunhofer.de">Francisco Garcia</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fkie_realsense_description</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>husky_control</exec_depend>
  <exec_depend>husky_description</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>twist_recovery</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  
</package>
